--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" prefix="og: https://ogp.me/ns#facebook">
+<html lang="es" prefix="og: https://ogp.me/ns#instagram">
+<html lang="es" prefix="og: https://ogp.me/ns#linkedin">
+<html lang="es" prefix="og: https://ogp.me/ns#elsalvadorexpress">
+<html lang="es" prefix="og: https://ogp.me/ns#elsalvadorexpresss">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +19,7 @@
     <meta name="description" content="Envios de Documentos">
     <meta name="description" content="Envios de Medicina">
     <meta name="description" content="Envios de Cajas">
+    <meta property="og:description" content="La empresa de encomiendas mas confiable de El Salvador. Traemos tus paquetes desde Houston." />
     <title>El Salvador Express</title>
     <!-- Estilos CSS3 -->
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
@@ -92,7 +97,7 @@
                     <span class="textR">San Antonio</span> |
                     y todo Estados Unidos; también enviar de Estados Unidos a todo El Salvador
                 </p>
-                <a  href="https://api.whatsapp.com/send?phone=50375006873" class="btn_inicio"><i class="fa fa-whatsapp" aria-hidden="true"></i> Contactanos</a>
+                <a  href="https://api.whatsapp.com/send?phone=50375006873" class="btn_inicio"><i class="fa fa-whatsapp" aria-hidden="true"></i> Contáctanos</a>
             </div>
         </section>
 
@@ -112,7 +117,7 @@
                   </div>
                 </div>
                 <div class="info_servicio">
-                    <h3><i class="fa fa-cubes" aria-hidden="true"></i> <span class="resaltar_S">Envíos De Alimentos</span></h3>
+                    <h3><i class="fa fa-cubes" aria-hidden="true"></i> <span class="resaltar_S">Envíos de alimentos</span></h3>
                     <div class="contacto_telefono">
                         <a href="tel:+50375006873" class="contacto_llamada"><i class="fa fa-phone" aria-hidden="true"></i> Llamar</a>
                         <a href="https://api.whatsapp.com/send?phone=+50375006873" class="contacto_whatsapp"><i class="fa fa-whatsapp" aria-hidden="true"></i> WhatsApp</a>
@@ -127,7 +132,7 @@
                   </div>
                 </div>
                 <div class="info_servicio">
-                    <h3><i class="fa fa-medkit" aria-hidden="true"></i> <span class="resaltar_S">Envíos De Medicina</span></h3>
+                    <h3><i class="fa fa-medkit" aria-hidden="true"></i> <span class="resaltar_S">Envíos de medicina</span></h3>
                     <div class="contacto_telefono">
                         <a href="tel:+50375006873" class="contacto_llamada"><i class="fa fa-phone" aria-hidden="true"></i> Llamar</a>
                         <a href="https://api.whatsapp.com/send?phone=+50375006873" class="contacto_whatsapp"><i class="fa fa-whatsapp" aria-hidden="true"></i> WhatsApp</a>
@@ -142,7 +147,7 @@
                   </div>
                 </div>
                 <div class="info_servicio">
-                    <h3><i class="fa fa-cube" aria-hidden="true"></i> <span class="resaltar_S">Envíos De Cajas</span></h3>
+                    <h3><i class="fa fa-cube" aria-hidden="true"></i> <span class="resaltar_S">Envíos de cajas</span></h3>
                     <div class="contacto_telefono">
                         <a href="tel:+50375006873" class="contacto_llamada"><i class="fa fa-phone" aria-hidden="true"></i> Llamar</a>
                         <a href="https://api.whatsapp.com/send?phone=+50375006873" class="contacto_whatsapp"><i class="fa fa-whatsapp" aria-hidden="true"></i> WhatsApp</a>
@@ -157,7 +162,7 @@
                   </div>
                 </div>
                 <div class="info_servicio">
-                    <h3><i class="fa fa-file-text" aria-hidden="true"></i> <span class="resaltar_S">Envíos De Documentos</span></h3>
+                    <h3><i class="fa fa-file-text" aria-hidden="true"></i> <span class="resaltar_S">Envíos de documentos</span></h3>
                     <div class="contacto_telefono">
                         <a href="tel:+50375006873" class="contacto_llamada"><i class="fa fa-phone" aria-hidden="true"></i> Llamar</a>
                         <a href="https://api.whatsapp.com/send?phone=+50375006873" class="contacto_whatsapp"><i class="fa fa-whatsapp" aria-hidden="true"></i> WhatsApp</a>
@@ -172,7 +177,7 @@
                   </div>
                 </div>
                 <div class="info_servicio">
-                    <h3><i class="fa fa-map-o" aria-hidden="true"></i> <span class="resaltar_S">Envíos A Otros Esdatos</span></h3>
+                    <h3><i class="fa fa-map-o" aria-hidden="true"></i> <span class="resaltar_S">Envíos a otros estados</span></h3>
                     <div class="contacto_telefono">
                         <a href="tel:+50375006873" class="contacto_llamada"><i class="fa fa-phone" aria-hidden="true"></i> Llamar</a>
                         <a href="https://api.whatsapp.com/send?phone=+50375006873" class="contacto_whatsapp"><i class="fa fa-whatsapp" aria-hidden="true"></i> WhatsApp</a>
@@ -185,7 +190,7 @@
         <!-- Oficinas -->
         <section id="oficinas">
             <div class="title">
-                <h2 class="titleText"><span>O</span>ficinas En El Salvador</h2>
+                <h2 class="titleText"><span>O</span>ficinas</h2>
             </div>
             <div class="linea_oficinas">
                 <ul>
@@ -193,7 +198,7 @@
                         <div class="content_ofi" data-aos="fade-down" data-aos-offset="150">
                             <h4>Oficina Austin Texas - Estados Unidos</h4>
                             <div class="cy">
-                                <h4>Horario de atención: - <b>Solo días sábados:</b></h4>
+                                <h4>Horario de atención: - <b>Solo días Sábados:</b></h4>
                                 <span>2:00 p. m. - 6:00 p. m. (Hora Estados Unidos)</span>
                             </div>
                             <div class="detalles_oficina">
@@ -245,7 +250,7 @@
                             <div class="detalles_oficina">
                                 <span class="icono"><i class="fa fa-map-marker"></i></span>
                                 <span class="nombre">Dirección:</span>
-                                <span class="detalle" id="ofi_dirETransitoSv" onclick="copiarAlPortapapeles('ofi_dirETransitoSv')">Calle desvió de gasolinera Texaco, entre la 1° calle oriente y calle 14 de Diciembre frente a la Huella De Oro</span>
+                                <span class="detalle" id="ofi_dirETransitoSv" onclick="copiarAlPortapapeles('ofi_dirETransitoSv')">Calle desvío de gasolinera Texaco, entre la 1° calle oriente y calle 14 de Diciembre frente a la Huella De Oro</span>
                             </div>
                             <div class="action_ll_wthp">
                                 <a href="tel:+50375006873" class="map_llamada"><i class="fa fa-phone" aria-hidden="true"></i> Llamar</a>
@@ -385,7 +390,7 @@
           <div class="linea_oficinas">
               <ul>
                   <li>
-                      <div class="content_ofi" data-aos="fade-down" data-aos-offset="150">
+                      <div class="content_ofi" data-aos="fade-down" data-aos-offset="50">
                           <h4>Tienda Saens - Cacaopera</h4>
                           <div class="cy">
                               <h4>Horario de atención: - <b>Solo días Miércoles:</b></h4>
@@ -406,7 +411,7 @@
                       </div>
                   </li>
                   <li>
-                      <div class="content_ofi" data-aos="fade-up" data-aos-offset="150">
+                      <div class="content_ofi" data-aos="fade-up" data-aos-offset="50">
                         <h4>Agencia De Viajes Benitez - Corinto, Morazan</h4>
                         <div class="cy">
                             <h4>Horario de atención: - <b>De Lunes a Sábados:</b></h4>
@@ -429,7 +434,7 @@
                   </li>
 
                   <li>
-                    <div class="content_ofi" data-aos="fade-up" data-aos-offset="150">
+                    <div class="content_ofi" data-aos="fade-up" data-aos-offset="50">
                       <h4>Laboratorio Clinico - El Cuco, San Miguel</h4>
                       <div class="cy">
                         <h4>Horario de atención: - <b>Solo días Miércoles:</b></h4>
@@ -451,7 +456,7 @@
                 </li>
 
                 <li>
-                    <div class="content_ofi" data-aos="fade-up" data-aos-offset="150">
+                    <div class="content_ofi" data-aos="fade-up" data-aos-offset="50">
                       <h4>Paty Salon - La Unión</h4>
                       <div class="cy">
                         <h4>Horario de atención: - <b>De Lunes a Sábados:</b></h4>
@@ -473,7 +478,7 @@
                 </li>
 
                 <li>
-                    <div class="content_ofi" data-aos="fade-up" data-aos-offset="150">
+                    <div class="content_ofi" data-aos="fade-up" data-aos-offset="50">
                       <h4>Sala De Bellesa Adolfo - Santa Ana</h4>
                       <div class="cy">
                         <h4>Horario de atención: - <b>Solo días Miércoles:</b></h4>
@@ -495,7 +500,7 @@
                 </li>
 
                 <li>
-                    <div class="content_ofi" data-aos="fade-up" data-aos-offset="150">
+                    <div class="content_ofi" data-aos="fade-up" data-aos-offset="50">
                       <h4>Cristian Deportes - Santa Rosa De Lima, La Unión</h4>
                       <div class="cy">
                         <h4>Horario de atención: - <b>De Lunes A Sábados:</b></h4>
@@ -517,7 +522,7 @@
                 </li>
 
                 <li>
-                    <div class="content_ofi" data-aos="fade-up" data-aos-offset="150">
+                    <div class="content_ofi" data-aos="fade-up" data-aos-offset="50">
                       <h4>Consultorio Del Dr. Aparicio (Ginecologo) - Sensultepeque, Cabañas</h4>
                       <div class="cy">
                         <h4>Horario de atención: - <b>Solo días Miércoles:</b></h4>
@@ -551,15 +556,16 @@
             <div class="content_abaut_us">
                 <div class="caja_abaut_us img" data-aos="fade-up" data-aos-offset="150" data-aos-easing="ease-in-sine">
                     <!-- img -->
+                    <img src="./imagenes/logo_amarillo.svg" alt="">
                 </div>
 
                 <div class="caja_abaut_us" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
                     <div class="textST">
-                        <p>Una empresa con más de 10 años de experiencia, brindando el servicio de encomiendas hacia los estados unidos, con el compromiso de hacer llegar un pedacito de El Salvador a todos nuestros seres queridos.</p>
+                        <p>Una empresa con más de 10 años de experiencia, brindando el servicio de encomiendas hacia los Estados Unidos, con el compromiso de hacer llegar un pedacito de El Salvador a todos nuestros seres queridos.</p>
                     </div>
                     <div class="textST">
                         <h3>¿Qué hacemos?</h3>
-                        <p>Llevamos encomiendas hacia estados unidos con compromiso y otorgando a nuestros clientes calidad y excelencia en hacer llegar las encomiendas que con mucho amor le envían nuestros hermanos en los estados unidos.</p>
+                        <p>Llevamos encomiendas hacia Estados Unidos con compromiso y otorgando a nuestros clientes calidad y excelencia en hacer llegar las encomiendas que con mucho amor le envían nuestros hermanos en los estados unidos.</p>
                     </div>
                 </div>
             </div>
