--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
 
                 <li>
                     <div class="content_ofi" data-aos="fade-up" data-aos-offset="50">
-                      <h4>Consultorio Del Dr. Aparicio (Ginecologo) - Sensuntepeque, Cabañas</h4>
+                      <h4>Consultorio Del Dr. Aparicio (Ginecólogo) - Sensuntepeque, Cabañas</h4>
                       <div class="cy">
                         <h4>Horario de atención: - <b>Solo días Miércoles:</b></h4>
                         <span>8:00 a. m. - 9:00 a. m. (Hora El Salvador)</span>
