--- a/index.html
+++ b/index.html
@@ -557,6 +557,8 @@
                 <div class="caja_abaut_us img" data-aos="fade-up" data-aos-offset="150" data-aos-easing="ease-in-sine">
                     <!-- img -->
                     <img src="./imagenes/logo_amarillo.svg" alt="">
+                    <br>
+                    <a  href="https://api.whatsapp.com/send?phone=50375006873" class="btn_inicio"><i class="fa fa-whatsapp" aria-hidden="true"></i> Llamar atencion al cliente </a>
                 </div>
 
                 <div class="caja_abaut_us" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
