--- a/index.html
+++ b/index.html
@@ -557,8 +557,6 @@
                 <div class="caja_abaut_us img" data-aos="fade-up" data-aos-offset="150" data-aos-easing="ease-in-sine">
                     <!-- img -->
                     <img src="./imagenes/logo_amarillo.svg" alt="">
-                    <br>
-                    <a  href="https://api.whatsapp.com/send?phone=50375006873" class="btn_inicio_qs"><i class="fa fa-whatsapp" aria-hidden="true"></i> Llamar atencion al cliente </a>
                 </div>
 
                 <div class="caja_abaut_us" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
@@ -570,6 +568,10 @@
                         <p>Llevamos encomiendas hacia Estados Unidos con compromiso y otorgando a nuestros clientes calidad y excelencia en hacer llegar las encomiendas que con mucho amor le envían nuestros hermanos en los estados unidos.</p>
                     </div>
                 </div>
+            </div>
+
+            <div class="title white">
+                <a  href="tel:+50374772922" class="btn_inicio_qs"><i class="fa fa-whatsapp" aria-hidden="true"></i> Llamar atencion al cliente </a>
             </div>
         </section>
     </main>
